--- a/TimeProfiler.xcodeproj/xcshareddata/xcschemes/TimeProfiler.xcscheme
+++ b/TimeProfiler.xcodeproj/xcshareddata/xcschemes/TimeProfiler.xcscheme
@@ -24,8 +24,8 @@
             buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "72B9D53A257A4310002E6696"
@@ -106,7 +106,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
